Kubernetes YAML/front-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: front-end
  name: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: front-end
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/newlang-compiler-default: "true"
        io.kompose.service: front-end
    spec:
      containers:
        - image: angeloafeltra/newlang:front-end
          name: front-end
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
